<resources>
    <string name="app_name">Gym</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_text">LOGIN</string>
    <string name="register_txt">REGISTER</string>
    <string name="full_name">Full Name</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password_hint">Retype Password</string>
    <string name="register_text">REGISTER</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_location">Map</string>
</resources>
